app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cooktheryan-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cooktheryan-frontend
  template:
    metadata:
      labels:
        app: cooktheryan-frontend
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: my-go-app
    spec:
      containers:
        - name: cooktheryan-frontend
          image: image-registry.openshift-image-registry.svc:5000//cooktheryan-frontend:latest
          ports:
            - name: http-8080
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
