app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cooktheryan-frontend
  labels:
    app: cooktheryan-frontend
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: my-go-app
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: cooktheryan-frontend
